<resources>
    <string name="app_name">MovieApp</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="have_account">Sudah Punya Akun?</string>
    <string name="username">Username</string>
    <string name="not_have_account">Tidak Punya Akun?</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="overview">Overview</string>
    <string name="sign_in_failed_message">Username/Password Salah!</string>
</resources>